# CircuitPython_Dynamixel

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: release_gh.yml
dynamixel/: protocol.py  servo.py  utils.py
dynamixel/devices/: __init__.py  ax12a.py  xl430w250t.py
examples/: dynamixel_simpletest.py
