# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Derek Daniels
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-dynamixel"
description = "CircuitPython library to interface with Dynamixel motors."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Derek Daniels", email = "derek@dbd.sh"}
]
urls = {Homepage = "https://github.com/dbd/CircuitPython_Dynamixel"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "dynamixel",
    "dynamixel",
    "motor",
    "servo",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["dynamixel"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
